Fix spacing on long sentences

--- a/p4wn.css
+++ b/p4wn.css
@@ -76,3 +76,7 @@
 .p4wn-send-message {
   width: 90%;
 }
+
+.p4wn-messages div {
+  word-wrap: break-word;
+}
